--- a/index.html
+++ b/index.html
@@ -9,77 +9,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-touch-fullscreen" content="yes"/>
+    <link rel="stylesheet" href="number-keyboard.css">
     <style>
         * {
             padding: 0;
             margin: 0;
         }
-        .number-board-mask{
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            /*background-color: rgba(232,232,232,0.8);*/
-        }
-        .number-board {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            box-sizing: border-box;
-            border-top: 1px solid #a1a1a1;
-            background-color: #f5f5f5;
-        }
-        .number-title{
-            line-height: 30px;
-            height: 30px;
-            font-size: 16px;
-            background-color: skyblue;
-            padding: 0 13px;
-        }
-        .number-result{
-            line-height: 40px;
-            font-size: 20px;
-            border: 3px groove #a1a1a1;
-            background-color: white;
-            padding: 0 10px;
-        }
-        .number-buttons{
-            line-height: 30px;
-        }
-        .number-buttons li{
-            display: inline-block;
-            width: 33%;
-            text-align: center;
-            padding: 3px;
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-
-        .number-buttons a{
-            display: block;
-            text-align: center;
-            background-color: white;
-            color: #333333;
-            text-decoration: none;
-            height: 30px;
-            border: 1px solid #a1a1a1;
-            border-radius: 3px 50% 3px 50%;
-        }
-        .number-buttons.integer a.key-dot{
-            visibility: hidden;
-        }
-        .number-buttons .key-cancel, .number-buttons .key-clear{
-            background-color: bisque;
-        }
-        .number-buttons .key-back{
-            background-color: lightcoral;
-        }
-        .number-buttons .key-confirm {
-            background-color: skyblue;
-        }
-
-
 
         p{
             padding: 10px;
@@ -106,7 +41,7 @@
 
 <script src="number-keyboard.js"></script>
 <script>
-    new NumberInput(document.getElementsByClassName('number-input')[0], {title: '请输入数值1:', canceled: function(){ console.log('取消...'); }});
+    new NumberInput(document.getElementsByClassName('number-input')[0], {title: '请输入数值1:', canceled: function(){ console.log('取消...'); }, unitName: '元'});
     new NumberInput(document.getElementsByClassName('number-input')[1], {title: '请输入数值2:', integer: true, confirmed: function(result){ console.log('当前确认的值为' + result); }});
     new NumberInput(document.getElementsByClassName('number-input')[2], {title: '请输入数值3:'});
 </script>
